--- a/musicAlbums.html
+++ b/musicAlbums.html
@@ -86,6 +86,14 @@
       </div>
     </nav>
 
+    <div class="jumbotron">
+      <h1 class="display-4">This is Our Music World</h1>
+      <p class="lead">We use this website to discuss some of the best and worst Albuns of the Music Era</p>
+      <hr class="my-4">
+      <p>Here you can find more about the music industry.</p>
+      <a class="btn btn-primary btn-lg" href="https://en.wikipedia.org/wiki/Music_history" role="button">click for more</a>
+    </div>
+
     <div class="container-fluid px-1 ">
       <div class="card-deck row pt-5 ">
         <div class="card col-xl-3 col-md-4 col-sm-6">
