--- a/musicAlbums.html
+++ b/musicAlbums.html
@@ -17,7 +17,7 @@
       There should be a column for the track order number, 
       one for the title, one for the artist name and one for 
       the track duration. (you can also add extra columns)?? -->
-      
+
 
     <style>
       .card {
@@ -258,6 +258,53 @@
         </div>
       </div>
     </div>
+
+    <table class="table table-striped table-dark mt-5">
+      <thead>
+        <tr>
+          <th scope="col-1">#</th>
+          <th scope="col-2">Title</th>
+          <th scope="col-2">Artist</th>
+          <th scope="col-2">Duration</th>
+          <th scope="col-2">Year</th>
+          <th scope="col-1">Add/Delete</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>Mark</td>
+          <td>Otto</td>
+          <td>@mdo</td>
+          <td></td>
+          <td><button type="button" class="btn btn-outline-light">Light</button></td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td>Jacob</td>
+          <td>Thornton</td>
+          <td>@fat</td>
+          <td></td>
+          <td><button type="button" class="btn btn-outline-light">Light</button></td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td>Larry</td>
+          <td>the Bird</td>
+          <td>@twitter</td>
+          <td></td>
+          <td><button type="button" class="btn btn-outline-light">Light</button></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td><td><button type="button" class="btn btn-outline-light">Light</button></td></td>
+        </tr>
+      </tbody>
+    </table>
+
     <h2 class="mt-5 ml-5 pl-5">hall of shame :</h2>
     <div
       id="carouselExampleSlidesOnly "
